MEDIUM / Support for Java 9