@@ -9,6 +9,10 @@ dependencies {
   testCompile flexoFoundationTest()
   
   // Test resource center
-  testRuntime project(':docxconnector-test-rc')
-  
+  testRuntime project(':docxconnector-test-rc')  
 }
+if (JavaVersion.current().isJava9Compatible()) {
+	tasks.withType(JavaCompile) {
+		options.compilerArgs.addAll(['--add-modules', 'java.xml.bind'])
+    }
+}  
